# gsot

./: .gitignore  README.md  docker-compose.yml
agent/: Dockerfile
agent/ros2/src/gsot/: CMakeLists.txt
agent/ros2/src/gsot/include/gsot/: tcp_client.hpp  udp_client.hpp
agent/ros2/src/gsot/launch/: gsot.launch.xml
agent/ros2/src/gsot/src/: camera_data_transmitter.cpp  config_data_transmitter.cpp  metric_data_transmitter.cpp  tcp_client.cpp
agent/ros2/src/pub_tester/: CMakeLists.txt  package.xml
agent/ros2/src/pub_tester/exports/: pub_tester_extras.cmake
agent/ros2/src/pub_tester/src/: battery_pub.cpp  orientation_pub.cpp
agent/src/gsot/: CMakeLists.txt  package.xml
agent/src/gsot/include/gsot/: tcp_client.hpp
agent/src/gsot/launch/: gsot.launch.xml
agent/src/gsot/scripts/: metric_data_helper.py
agent/src/gsot/src/: config_data_transmitter.cpp  metric_data_transmitter.cpp  tcp_client.cpp  udp_client.cpp
agent/src/pub_tester/launch/: pub_tester.launch.xml
agent/src/pub_tester/src/: camera_data_pub.cpp
client/: Dockerfile
client/frontend/: package-lock.json  package.json  tsconfig.json
client/frontend/public/: index.html
client/frontend/src/: App.tsx  index.css  index.tsx
client/frontend/src/components/: LineChart.tsx  Sidebar.tsx  SidebarChild.tsx  TopicView.tsx
client/server/: package-lock.json  package.json
client/server/src/: index.ts  logger.ts  tcpClients.ts
gs/: Dockerfile  camera_data_reciever.py  metric_data_reciever.py  reciever.py
sub/: Dockerfile
sub/ros2/src/sub_data_transmission/: CMakeLists.txt  package.xml
sub/ros2/src/sub_data_transmission/include/sub_data_transmission/: tcp_client.hpp
sub/ros2/src/sub_data_transmission/launch/: sub_data_transmission.launch.xml
sub/ros2/src/sub_data_transmission/src/: camera_data_transmitter.cpp  metric_data_transmitter.cpp  tcp_client.cpp  udp_client.cpp
sub/ros2/src/sub_pub_tester/: CMakeLists.txt  package.xml
sub/ros2/src/sub_pub_tester/exports/: sub_pub_tester_extras.cmake
sub/ros2/src/sub_pub_tester/launch/: sub_pub_tester.launch.xml
sub/ros2/src/sub_pub_tester/msg/: BatteryLevels.msg
sub/ros2/src/sub_pub_tester/src/: battery_pub.cpp  camera_data_pub.cpp  orientation_pub.cpp  speed_pub.cpp
