<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gsot</name>
  <description>The gsot package provides a means for transmitting real-time camera feeds and metric data.</description>
  <version>0.0.0</version>
  <license>TODO</license>
  <maintainer email="carson@frankovich.dev">cfrankovich</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>pub_tester</depend>

  <depend>image_transport</depend>
  <depend>opencv</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>ros2launch</exec_depend>
</package>
