<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pub_tester</name>
  <description>The pub_test package is designed to facilitate testing data publishing mechanisms.</description>
  <version>0.0.0</version>
  <license>TODO</license>
  <maintainer email="carson@frankovich.dev">cfrankovich</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>opencv</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>ros2launch</exec_depend>
</package>
